[package]
name = "roguelike-rpg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roguelike-rpg"
path = "src/main.rs"

[dependencies]
ratatui    = "0.28"
crossterm  = "0.28"
rand       = "0.8"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# web server
axum           = { version = "0.7", features = ["ws"] }
tokio          = { version = "1",   features = ["full"] }
futures-util   = "0.3"
